src/test/ui/privacy/legacy-ctor-visibility.stderr
error[E0423]: expected function, found struct `S`
  --> $DIR/legacy-ctor-visibility.rs:9:13
   |
LL |             S(10);
   |             ^ help: a function with a similar name exists: `f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
